# prolog-utilities

./: .gitignore  README.md  default.nix  make.sh  shell.nix
pl_cgi/: Darwin.def  Linux.def  Makefile  README.md  cgi.pl  gp-cgi.pl
pl_cgi/src/: cgi.pl  common.pl  gp-cgi.pl  top-cgi.pl
pl_cgi/test/: README.md  gp-test.pl  swi-test.pl  test.pl  test101.0
pl_postgresql/: .gitignore  Darwin.def  IRIX.def  Linux.def  Makefile  Makefile.in  README.md  SunOS.def  configure.ac
pl_postgresql/src/: pgsql.c  pgsql.pl  swi-pg-c.c
pl_regexp/: Darwin.def  Linux.def  Makefile  README.md  gp-regexp.pl  mk_swi-prolog.sh  test-gp.pl
pl_regexp/src/: gp-regexp-c.c  gp-regexp.pl  regexp.c  regexp.pl  swi-regexp.c  top-regexp.pl
pl_toolbox/: Darwin.def  Linux.def  Makefile  README.md  gp-toolbox.pl  mk_swi-prolog.sh
pl_toolbox/src/: gp-toolbox.pl  json.pl  lowlevelroutines.c  math.pl  stream.pl  string.pl  toolbox.pl  top-toolbox.pl  vector.pl
